<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.registration.ui.RegistrationFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/DP30"
        android:backgroundTint="?attr/colorOnSecondary"
        app:cardCornerRadius="@dimen/DP20"
        app:cardElevation="@dimen/DP20"
        app:strokeColor="?attr/colorSecondary"
        app:strokeWidth="@dimen/DP2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/DP24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creating_account"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/SP36"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_login"
                style="@style/EditTextLayoutLogin"
                android:hint="@string/nickname"
                app:boxCornerRadiusBottomEnd="@dimen/DP30"
                app:boxCornerRadiusBottomStart="@dimen/DP30"
                app:boxCornerRadiusTopEnd="@dimen/DP30"
                app:boxCornerRadiusTopStart="@dimen/DP30"
                app:boxStrokeColor="?attr/colorSecondary"
                app:boxStrokeWidth="@dimen/DP2"
                app:hintTextColor="?attr/colorSecondary"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="?attr/colorSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_login"
                    style="@style/EditTextLogin"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_layout_password"
                style="@style/EditTextLayoutLogin"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:boxCornerRadiusBottomEnd="@dimen/DP30"
                app:boxCornerRadiusBottomStart="@dimen/DP30"
                app:boxCornerRadiusTopEnd="@dimen/DP30"
                app:boxCornerRadiusTopStart="@dimen/DP30"
                app:boxStrokeColor="?attr/colorSecondary"
                app:boxStrokeWidth="@dimen/DP2"
                app:hintTextColor="?attr/colorSecondary"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="?attr/colorSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    style="@style/EditTextLogin"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/DP30">

                <Button
                    android:id="@+id/button_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="?attr/colorSecondary"
                    android:text="@string/register"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="@dimen/SP18"
                    app:cornerRadius="@dimen/DP20" />

                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/DP30"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>