<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".heroes.HeroesListFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/heroes_list_toolbar"
        style="@style/base_toolbar_style"
        android:layout_width="0dp"
        app:layout_constraintEnd_toStartOf="@+id/button_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/heroes_list_menu"
        app:title="@string/list_of_heroes"
        app:titleTextAppearance="@style/toolbar"
        app:titleTextColor="?attr/colorSecondary" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/button_profile"
        android:layout_width="@dimen/DP30"
        android:layout_height="@dimen/DP30"
        android:layout_marginEnd="@dimen/DP8"
        android:background="?attr/colorSecondary"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@+id/heroes_list_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heroes_list_toolbar"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:tint="?attr/colorOnSecondary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHeroes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/DP8"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroes_list_toolbar"
        tools:listitem="@layout/item_hero" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_retry"
        style="@style/group_message_style"
        app:constraint_referenced_ids="button_retry, text_retry" />

    <TextView
        android:id="@+id/text_retry"
        style="@style/text_view_message_style"
        android:text="@string/error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_retry"
        style="@style/button_message_style"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="@+id/text_retry"
        app:layout_constraintStart_toStartOf="@+id/text_retry"
        app:layout_constraintTop_toBottomOf="@+id/text_retry" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout_heroes_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heroes_list_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                style="@style/shimmer_item_hero_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="4dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                style="@style/shimmer_item_hero_style"
                android:layout_marginStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/materialCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="4dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                style="@style/shimmer_item_hero_style"
                android:layout_marginTop="@dimen/DP16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:strokeWidth="4dp" />

            <com.google.android.material.card.MaterialCardView
                style="@style/shimmer_item_hero_style"
                android:layout_marginStart="40dp"
                android:layout_marginTop="@dimen/DP16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialCardView3"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
                app:strokeWidth="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>